[package]
name = "runescript-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Telis <xlitersps@gmail.com>"]
description = "A compiler for RuneScript, the scripting language used by RuneScape"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
